re PR c++/9829 (Missing colon in nested namespace usage causes ICE)

PR c++/9829
	* decl.c (grokdeclarator): Handle SCOPE_REFs whose second argument
	is a NAMESPACE_DECL.

	PR c++/9829
	* g++.dg/parse/namespace1.C: New test.

From-SVN: r63451